##Text encoding: utf-8

2008-11-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: restored selection.

2008-11-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: unescape uri before displaying it.
	* libs/gcp/stringdlg.cc: ditto.
	* plugins/paint/wikipedia/wikipediatool.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/spectra/document.cc: ditto.

2008-11-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: unescape uri before displaying it.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/stringdlg.cc: ditto.
	* programs/3d/application.cc: ditto.
	* programs/3d/document.cc: ditto.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/spectra/application.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.

2008-11-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: fixed issues when loading a fragment with
	a residue.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcu/document.h: fixed typo in documentation.

2008-11-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: implement zoom.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/rectangle.cc: don't create a path for a transparent rectangle.
	* libs/gcp/document.cc: reimplement printing.
	* libs/gcp/view.cc: reimplement pdf, ps and eps exports.
	* libs/gcu/application.cc: add a new icon name member, and do not
	set default icon name for the application.
	* libs/gcu/application.h: ditto.
	* libs/gcu/dialog.cc: correctly set the icon name.
	* plugins/paint/templates/templatetool.cc: zoom the templateso
	that it fits in the preview, and update all positions.

2008-11-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/arrow.cc: fixed returned item in Distance().
	* libs/gccv/circle.cc: ditto.
	* libs/gccv/line.cc: ditto.
	* libs/gccv/poly-line.cc: ditto.